--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,31 +30,11 @@
             android:orientation="vertical"
             android:gravity="center">
 
-            <EditText
-                android:id="@+id/email_et"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textEmailAddress"
-                android:hint="@string/sign_in_email"/>
-
-            <EditText
-                android:id="@+id/password_et"
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/facebook_sign_in_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:hint="@string/sign_in_password"/>
-
-            <Button
-                android:id="@+id/sign_in_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_in_button"/>
-
-            <Button
-                android:id="@+id/sign_up_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_up_button"/>
+                android:layout_gravity="center_horizontal"/>
 
         </LinearLayout>
 
