add image capture, user viewing
- added activity for taking a photo
- added ImageView subclass whose alpha is changed based on user swiping
  left and right

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_weight="1"
         android:padding="16dp">
 
-        <ImageView
+        <xyz.mcnallydawes.clik.ClikImageView
             android:id="@+id/user_iv"
             android:layout_width="match_parent"
             android:layout_height="400dp" />
