remove yay/nay buttons for now, add logout
Yay/nay buttons were there for show, no implementation. Removed for now.

Since there was no logout button in the main interface, we needed to
uninstall and reinstall the app to get back to the login screen. A
logout button fixes this.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,18 +50,11 @@
         android:padding="16dp">
 
         <Button
-            android:id="@+id/nay_btn"
+            android:id="@+id/logout_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/nay_btn"/>
-
-        <Button
-            android:id="@+id/yay_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/yay_btn"/>
+            android:text="Logout"/>
 
     </LinearLayout>
 
